--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
     "license": "MIT",
     "authors": [
         {
-            "name": "Rias",
+            "name": "Rias Van der Veken",
             "email": "rias@spatie.be",
             "role": "Developer"
         }
