--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
         "filepond-plugin-file-validate-size": "^2.2.8",
         "filepond-plugin-file-validate-type": "^1.2.9",
         "filepond-plugin-image-crop": "^2.0.6",
-        "filepond-plugin-image-preview": "^4.6.12"
+        "filepond-plugin-image-preview": "^4.6.12",
+        "filepond-plugin-image-resize": "^2.0.10",
+        "filepond-plugin-image-transform": "^3.8.7"
     },
     "devDependencies": {
         "laravel-vite-plugin": "^1.0.5",
