--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
         "filepond-plugin-image-crop": "^2.0.6",
         "filepond-plugin-image-preview": "^4.6.12",
         "filepond-plugin-image-resize": "^2.0.10",
-        "filepond-plugin-image-transform": "^3.8.7"
+        "filepond-plugin-image-transform": "^3.8.7",
+        "filepond-plugin-file-rename": "^1.1.8"
     },
     "devDependencies": {
         "laravel-vite-plugin": "^1.0.5",
